# mxint-q

./: Makefile  download_models.sh  main.py  pyproject.toml
evaluation/: eval_longbench.py  pred_longbench.py
longbench_pred/Llama-2-13b-chat-hf/: 2wikimqa.jsonl  hotpotqa.jsonl  multi_news.jsonl  multifieldqa_en.jsonl  qasper.jsonl  qmsum.jsonl  repobench-p.jsonl  result.json  trec.jsonl  triviaqa.jsonl
longbench_pred/Llama-3.1-8B-Instruct/: 2wikimqa.jsonl  hotpotqa.jsonl  multi_news.jsonl  multifieldqa_en.jsonl  qasper.jsonl  qmsum.jsonl  repobench-p.jsonl  result.json  trec.jsonl  triviaqa.jsonl
longbench_pred/Llama-3.2-1B-Instruct/: 2wikimqa.jsonl  hotpotqa.jsonl  multi_news.jsonl  multifieldqa_en.jsonl  qasper.jsonl  qmsum.jsonl  repobench-p.jsonl  result.json  trec.jsonl  triviaqa.jsonl
longbench_pred/Llama-3.2-3B-Instruct/: 2wikimqa.jsonl  hotpotqa.jsonl  multi_news.jsonl  multifieldqa_en.jsonl  qasper.jsonl  qmsum.jsonl  repobench-p.jsonl  result.json  trec.jsonl  triviaqa.jsonl
longbench_pred/Mistral-7B-Instruct-v0.3/: 2wikimqa.jsonl  hotpotqa.jsonl  multi_news.jsonl  multifieldqa_en.jsonl  qasper.jsonl  qmsum.jsonl  repobench-p.jsonl  result.json  trec.jsonl  triviaqa.jsonl
longbenchconfig/: model2maxlen.json
models/: llama_mxint.py  mistral_mxint.py
quant/: intlinear.py  mxintquant.py  uniformquantizer.py
utils/: argutils.py  loggerutils.py
